# Controller-Mapper

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/me/ductran/controllermapper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  controllermapper.cpp  event_inj.cpp  getevent.cpp  native-lib.cpp
app/src/main/cpp/screencap/: Android.mk  screencap.cpp
app/src/main/cpp/udevices/: Gamepad2Touch.cpp  Gamepad2Touch.hpp  IUdevMapper.hpp  PesGamepad.cpp  PesGamepad.hpp  Stoppable.cpp  Udev.cpp  Udev.hpp  UdevGamepad.cpp  UdevGamepad.hpp  UdevTouch.cpp  UdevTouch.hpp
app/src/main/java/me/ductran/controllermapper/: App.kt  AppADB.kt  FilelogADB.kt  GlobalStorage.kt  MainActivity.kt  MainActivityOld.kt  MainActivityViewModel.kt  MyInputManager.java  ScreenMonitorService.kt  SetupActivity.kt
app/src/main/java/me/ductran/controllermapper/evdev/: ControllerService.kt  ControllerToTouch.kt  EventListener.kt  InputEventCode.kt  Internal.kt  ScreenMonitor.kt  Shell.kt  TouchManager.kt
app/src/main/java/me/ductran/controllermapper/eventinj/: EventInject.kt  Shell.kt
app/src/main/res/layout/: activity_main.xml  activity_setup.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  provider_paths.xml
app/src/test/java/me/ductran/controllermapper/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/src/main/java/xyz/cp74/evdev/: Demo.java  DemoXbox.java
(+6 files in other folders)
